--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -12,6 +12,10 @@
 		</div>{{ end }}
 
 		<section class="body">
+			<aside>
+				<b>Table of contents</b>
+				{{ .TableOfContents }}
+			</aside>
 			{{ .Content }}
 		</section>
 
