--- a/layouts/partials/comments.html
+++ b/layouts/partials/comments.html
@@ -3,14 +3,4 @@
 {{- /* Comments area end */ -}}
 
 
-<!-- Disqus -->
-{{ if and site.DisqusShortname (not (eq .Params.comments false)) }}
-<div class="mt-24" id="disqus_thread"></div>
-<script>
-  const disqusShortname = '{{ site.DisqusShortname }}';
-  const script = document.createElement('script');
-  script.src = 'https://' + disqusShortname + '.disqus.com/embed.js';
-  script.setAttribute('data-timestamp', +new Date());
-  document.head.appendChild(script);
-</script>
-{{ end }}
+{{ template "_internal/disqus.html" . }}
