--- a/layouts/partials/comments.html
+++ b/layouts/partials/comments.html
@@ -3,4 +3,12 @@
 {{- /* Comments area end */ -}}
 
 
-{{ template "_internal/disqus.html" . }}
+<!-- {{ template "_internal/disqus.html" . }}
+<script src="https://utteranc.es/client.js"
+        repo="git@github.com:young1906/young1906.github.io"
+        issue-term="issue"
+        theme="github-light"
+        crossorigin="anonymous"
+        async>
+</script> 
+-->
