--- a/layouts/partials/comments.html
+++ b/layouts/partials/comments.html
@@ -1,14 +1,6 @@
 {{- /* Comments area start */ -}}
 {{- /* to add comments read => https://gohugo.io/content-management/comments/ */ -}}
+{{ template "_internal/disqus.html" . }}
 {{- /* Comments area end */ -}}
 
 
-<!-- {{ template "_internal/disqus.html" . }}
-<script src="https://utteranc.es/client.js"
-        repo="git@github.com:young1906/young1906.github.io"
-        issue-term="issue"
-        theme="github-light"
-        crossorigin="anonymous"
-        async>
-</script> 
--->
