--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -35,6 +35,9 @@
   </div>
   {{- end }}
 
+  {{- if (.Param "comments") }}
+  {{- partial "comments.html" . }}
+  {{- end }}
 
   <footer class="post-footer">
     {{- $tags := .Language.Params.Taxonomies.tag | default "tags" }}
